--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.h2.console.path=/h2-console
 # See SQL on console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8081
